@@ -1,0 +1,19 @@
+<?xml version="1.0"?>
+<object name="portal_actions" meta_type="Plone Actions Tool"
+   xmlns:i18n="http://xml.zope.org/namespaces/i18n">
+ <object name="object" meta_type="CMF Action Category">
+  <object name="PerSEO" meta_type="CMF Action" i18n:domain="collective.perseo">
+   <property name="title" i18n:translate="">SEO</property>
+   <property name="description" i18n:translate=""></property>
+   <property
+      name="url_expr">string:${object_url}/@@perseo-tab-context</property>
+   <property name="icon_expr"></property>
+   <property name="available_expr">object/@@perseo-tab-available</property>
+   <property name="permissions">
+    <element value="Modify portal content"/>
+   </property>
+   <property name="visible">True</property>
+  </object>
+ </object>
+</object>
+
