@@ -11,3 +11,4 @@ Changelog
 - Added some views that allows to calculate title tag base on the type of context [fdelia]
 - Added some methods that allows to calculate title tag base on the page in PloneSiteRoot context [fdelia]
 - Added handling of variables %%title%% and %%tag%% in meta tags from Plone SEO control panel tool [fdelia]
+- Added object action and view for SEO tab [fdelia]
